--- a/rule.html
+++ b/rule.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>静态部署测试</div>
-    <div>
-        <a href="rule.html"></a>
-    </div>
+    <div>细则页</div>
+    <div></div>
 </body>
 </html>
