--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>静态部署测试</div>
     <div>
-        <a href="rule.html"></a>
+        <a href="rule.html">细则页</a>
     </div>
 </body>
 </html>
