添加头像图片

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <div>静态部署测试</div>
     <div>
-        <a href="rule.html">细则页</a>
+        <a href="rule.html">
+            <img src="images/icon.png" alt="头像">
+        </a>
     </div>
 </body>
 </html>
